[gd_scene load_steps=12 format=2]

[ext_resource path="res://canvas/scratch_drawer/line_2.png" type="Texture" id=1]
[ext_resource path="res://canvas/scratch_drawer/line_0.png" type="Texture" id=2]
[ext_resource path="res://canvas/scratch_drawer/line_1.png" type="Texture" id=3]
[ext_resource path="res://canvas/scratch_drawer/line_4.png" type="Texture" id=4]
[ext_resource path="res://canvas/scratch_drawer/line_5.png" type="Texture" id=5]
[ext_resource path="res://canvas/scratch_drawer/Clear.png" type="Texture" id=6]
[ext_resource path="res://canvas/scratch_drawer/line_3.png" type="Texture" id=7]
[ext_resource path="res://canvas/canvas.tscn" type="PackedScene" id=8]
[ext_resource path="res://canvas/scratch_drawer/scratch_drawer.gd" type="Script" id=9]
[ext_resource path="res://canvas/scratch_drawer/eraser.png" type="Texture" id=10]

[sub_resource type="ButtonGroup" id=4]

[node name="ScratchDrawer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 54.0
margin_bottom = 392.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 47.0
margin_bottom = 385.0

[node name="Line" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 24.0
hint_tooltip = "line"
pressed = true
group = SubResource( 4 )
icon = ExtResource( 2 )

[node name="Rounded" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 40.0
margin_bottom = 52.0
hint_tooltip = "rounded"
group = SubResource( 4 )
icon = ExtResource( 3 )

[node name="Thick" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 80.0
hint_tooltip = "thick"
group = SubResource( 4 )
icon = ExtResource( 1 )

[node name="WidthCurve" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 40.0
margin_bottom = 108.0
hint_tooltip = "width curve"
group = SubResource( 4 )
icon = ExtResource( 7 )

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 40.0
margin_bottom = 116.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 40.0
margin_bottom = 140.0
text = "clr"
color = Color( 0.156863, 0.156863, 0.196078, 1 )

[node name="Erase" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 40.0
margin_bottom = 168.0
hint_tooltip = "erase"
icon = ExtResource( 10 )

[node name="Gradient" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 40.0
margin_bottom = 196.0
hint_tooltip = "gradient"
group = SubResource( 4 )
icon = ExtResource( 4 )

[node name="Rainbow" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 40.0
margin_bottom = 224.0
hint_tooltip = "rainbow"
group = SubResource( 4 )
icon = ExtResource( 5 )

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 40.0
margin_bottom = 232.0

[node name="Clear" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 40.0
margin_bottom = 258.0
icon = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 40.0
margin_bottom = 378.0
size_flags_vertical = 3

[node name="MaxDistance" type="VSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 116.0
hint_tooltip = "max distance"
min_value = 5.0
max_value = 35.0
value = 20.0
tick_count = 5

[node name="Bias" type="VSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 116.0
hint_tooltip = "bias"
min_value = 0.1
max_value = 3.0
step = 0.1
value = 2.0
tick_count = 4

[node name="Canvas" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_right = 512.0
margin_bottom = 392.0
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/VBoxContainer/Line" to="." method="_on_Line_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Rounded" to="." method="_on_Rounded_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Thick" to="." method="_on_Thick_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/WidthCurve" to="." method="_on_WidthCurve_pressed"]
[connection signal="color_changed" from="PanelContainer/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Erase" to="." method="_on_Erase_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Gradient" to="." method="_on_Gradient_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Rainbow" to="." method="_on_Rainbow_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/MaxDistance" to="." method="_on_MaxDistance_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/Bias" to="." method="_on_Bias_value_changed"]
[connection signal="drawing" from="Canvas" to="." method="_on_Canvas_drawing"]
